# IEC-61850-Client-Studio

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
backend/build-tests/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  build.ninja  cmake_install.cmake  run-vsdev-command.cmd
backend/src/: grpc_service.cpp  grpc_service.h  main.cpp  studio_model.cpp  studio_model.h  studio_model_device.cpp  studio_model_mock.cpp  utils.cpp  utils.h
backend/tests/: test_framework.h  test_main.cpp  test_utils.cpp
blog/: IEC61850-Client-Studio-blog.md
proto/: iec61850studio.proto
scripts/: build-backend.js  run-electron.js  run-tests.js
src/main/: main.js
src/preload/: preload.js
src/renderer/: index.html  renderer.js  styles.css
